# Drone

./: CMakeLists.txt
Autopilot/: CMakeLists.txt
Autopilot/Depth/: CMakeLists.txt
Autopilot/Depth/include/: camera.h  color.h  depth.h  log.h  stereobm.h
Autopilot/Depth/src/: kernels.cu  main.cpp  main.cu  stereobm.cpp
Autopilot/Depth/src/pipeline/: makefile
Autopilot/include/: camera.h  color.h  device.h  environment.h  geometry.h  image.h  kernels.cuh  kernels.h  map.h  stereobm.h  thermal.h  timer.h
Autopilot/src/: kernels.cu  main.cpp  stereobm.cpp
Shared/include/: device.h  map.h
include/: camera.h  color.h  cores.h  cuda_map.h  depth.h  environment.h  geometry.h  image.h  kernels.cuh  map.h  map_1.0.h  map_1.1.h  pipeline.h  stereobm.h  timer.h
sandbox/camera/: camera  main.cpp  makefile
sandbox/cuda/: kernel.cu  main  main.cpp  makefile
sandbox/environment/: main  main.cpp  makefile  object.stl
sandbox/map/: main  main.cpp  makefile
sandbox/performace/: main  main.cpp  makefile
src/: kernels.cu  main.cpp  main.cu  stereobm.cpp
src/depth/: depth.cu  main.cu
src/device/camera/: camera.cpp  main.cu
src/pipeline/: main  main.cu
src/proc/: CMakeLists.txt  main.cu  proc.cu  proc.h
test/convolve/: CMakeLists.txt  main.cpp
test/cuda_map/: main.cu
test/depth/: CMakeLists.txt  main.cpp
validations/: cachegrind_validation.txt  valgrind_validation.txt
